--- a/index.html
+++ b/index.html
@@ -54,26 +54,29 @@
         <input type="button" class="btn btn4" id="register" value="REGISTER">
       </div>
 
-      <!-- PLAYERS NAME -->
-      <input type="button" class="btn btn2 menu" id="playersNameInputMenu" value="Players Name">
+      <!-- SETTINGS-->
+      <input type="button" class="btn btn2 menu" id="settings" value="Setings">
+
+       <!-- PLAYERS NAME -->
+      <!-- <input type="button" class="btn btn2 menu" id="playersNameInputMenu" value="Players Name"> -->
       <div id="playersName">
         <p>Player One Name: <input type="text" id="playerOneNameInput" placeholder="Enter your name here"></p>
         <p>Player Two Name: <input type="text" id="playerTwoNameInput" placeholder="Enter your name here"></p>
       </div>
 
       <!-- PLAYERS MODE -->
-      <input type="button" class="btn btn2 menu" id="playersModeMenu" value="Players Mode">
+      <!-- <input type="button" class="btn btn2 menu" id="playersModeMenu" value="Players Mode"> -->
       <div id="playersModeBtn" class="btnDiv">
         <input type="button" class="btn btn3" id="onePlayer" value="One Player">
         <input type="button" class="btn btn4" id="twoPlayers" value="Two Players">
       </div>
 
       <!-- CHOOSE SET -->
-      <input type="button" class="btn btn2 menu" id="chooseSetMenu" value="Choose Set">
+      <!-- <input type="button" class="btn btn2 menu" id="chooseSetMenu" value="Choose Set"> -->
       <div id="chooseSetBtn" class="btnDiv">
-        <input type="button" class="btn btn3 chooseSetActive" id='chooseFast' value="FAST II">
-        <input type="button" class="btn btn4 chooseSetActive" id='chooseProverbs' value="Proverbs">
-        <input type="button" class="btn btn4 chooseSetActive" id='chooseMore' value="TEST">
+        <input type="button" class="btn btn3 " id='chooseFast' value="FAST II">
+        <input type="button" class="btn btn4 " id='chooseProverbs' value="Proverbs">
+        <input type="button" class="btn btn4 " id='chooseMore' value="TEST">
       </div>
 
       <!-- ADD VERSE -->
@@ -125,6 +128,11 @@
   <div id="grid" class="grid">
   </div>
 
+
+
+
+
+  
 </body>
 
 </html>
